; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_DecoderThread_Reload.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_DecoderThread_Reload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { i32, i32, i32*, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@VLC_SUCCESS = common dso_local global i64 0, align 8
@VLC_EGENERIC = common dso_local global i32 0, align 4
@RELOAD_DECODER_AOUT = common dso_local global i32 0, align 4
@AUDIO_ES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.decoder_owner*, i32, i32*, i32)* @DecoderThread_Reload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DecoderThread_Reload(%struct.decoder_owner* %0, i32 %1, i32* noalias %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.decoder_owner*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store %struct.decoder_owner* %0, %struct.decoder_owner** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %14 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %13, i32 0, i32 4
  store i32* %14, i32** %10, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i64 @es_format_Copy(i32* %11, i32* %15)
  %17 = load i64, i64* @VLC_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %21 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %20, i32 0, i32 0
  store i32 1, i32* %21, align 8
  %22 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %22, i32* %5, align 4
  br label %70

23:                                               ; preds = %4
  %24 = load i32*, i32** %10, align 8
  %25 = call i32 @decoder_Clean(i32* %24)
  %26 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %27 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %26, i32 0, i32 0
  store i32 0, i32* %27, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* @RELOAD_DECODER_AOUT, align 4
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %31, label %56

31:                                               ; preds = %23
  %32 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %33 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %32, i32 0, i32 3
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* @AUDIO_ES, align 8
  %37 = icmp eq i64 %35, %36
  %38 = zext i1 %37 to i32
  %39 = call i32 @assert(i32 %38)
  %40 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %41 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %40, i32 0, i32 2
  %42 = load i32*, i32** %41, align 8
  store i32* %42, i32** %12, align 8
  %43 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %44 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %43, i32 0, i32 2
  store i32* null, i32** %44, align 8
  %45 = load i32*, i32** %12, align 8
  %46 = icmp ne i32* %45, null
  br i1 %46, label %47, label %55

47:                                               ; preds = %31
  %48 = load i32*, i32** %12, align 8
  %49 = call i32 @aout_DecDelete(i32* %48)
  %50 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %51 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = load i32*, i32** %12, align 8
  %54 = call i32 @input_resource_PutAout(i32 %52, i32* %53)
  br label %55

55:                                               ; preds = %47, %31
  br label %56

56:                                               ; preds = %55, %23
  %57 = load i32*, i32** %10, align 8
  %58 = load i32, i32* %7, align 4
  %59 = call i64 @LoadDecoder(i32* %57, i32 %58, i32* %11)
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %66

61:                                               ; preds = %56
  %62 = load %struct.decoder_owner*, %struct.decoder_owner** %6, align 8
  %63 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %62, i32 0, i32 0
  store i32 1, i32* %63, align 8
  %64 = call i32 @es_format_Clean(i32* %11)
  %65 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %65, i32* %5, align 4
  br label %70

66:                                               ; preds = %56
  %67 = call i32 @es_format_Clean(i32* %11)
  %68 = load i64, i64* @VLC_SUCCESS, align 8
  %69 = trunc i64 %68 to i32
  store i32 %69, i32* %5, align 4
  br label %70

70:                                               ; preds = %66, %61, %19
  %71 = load i32, i32* %5, align 4
  ret i32 %71
}

declare dso_local i64 @es_format_Copy(i32*, i32*) #1

declare dso_local i32 @decoder_Clean(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @aout_DecDelete(i32*) #1

declare dso_local i32 @input_resource_PutAout(i32, i32*) #1

declare dso_local i64 @LoadDecoder(i32*, i32, i32*) #1

declare dso_local i32 @es_format_Clean(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
